--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <div class="details">
                 <h4 class="color margin">MERRY CHRISTMAS</h4>
                 <p>Giáng Sinh đến rồi.</p>
-                <p>Chúc bạn mùa lễ ấm áp và ngọt</p>
-                <p>ngào như tình bạn của chúng ta.</p>
+                <p>Chúc bạn mùa lễ ấm áp và thi</p>
+                <p>thật tốt nhé, toàn điểm 10.</p>
                 <p>Cảm ơn bạn luôn bên cạnh tôi.</p>
                 <p>Hy vọng chúng ta sẽ có thêm nhiều</p>
                 <p>kỷ niệm đẹp trong năm tới.</p>
