--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
             </div>
             <div class="details">
                 <h4 class="color margin">MERRY CHRISTMAS</h4>
-                <p>Giáng Sinh đến rồi.</p>
+                <p>Năm đầu đón giáng sinh cùng bạn.</p>
                 <p>Chúc bạn mùa lễ ấm áp và thi</p>
                 <p>thật tốt nhé, toàn điểm 10.</p>
-                <p>Cảm ơn bạn luôn bên cạnh tôi.</p>
+                <p>Cảm ơn bạn luôn bên cạnh tâm sự với tôi.</p>
                 <p>Hy vọng chúng ta sẽ có thêm nhiều</p>
                 <p>kỷ niệm đẹp trong năm tới.</p>
-                <p class="text-right">Chúc mừng Giáng Sinh!</p>
-                <p class="text-right">♥MĐ♥</p>
+                <p class="text-right">love you so much!</p>
+                <p class="text-right">♥MĐatt♥</p>
             </div>
         </div>
     </div>
