--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>Năm đầu đón giáng sinh cùng bạn.</p>
                 <p>Chúc bạn mùa lễ ấm áp và thi</p>
                 <p>thật tốt nhé, toàn điểm 10.</p>
-                <p>Cảm ơn bạn luôn bên cạnh tâm sự với tôi.</p>
+                <p>Cảm ơn bạn bên cạnh tâm sự với tôi.</p>
                 <p>Hy vọng chúng ta sẽ có thêm nhiều</p>
                 <p>kỷ niệm đẹp trong năm tới.</p>
                 <p class="text-right">love you so much!</p>
