--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="container">
         <button id="showButton">
-            Bấm dô đi T
+            Bấm dô đi N
         </button>
     </div>
 
@@ -33,7 +33,7 @@
             </div>
             <div class="details">
                 <h4 class="color margin">MERRY CHRISTMAS</h4>
-                <p>Năm đầu đón giáng sinh cùng bạn.</p>
+                <p>Năm thứ 5 đón giáng sinh cùng b.</p>
                 <p>Chúc bạn mùa lễ ấm áp và thi</p>
                 <p>thật tốt nhé, toàn điểm 10.</p>
                 <p>Cảm ơn bạn bên cạnh tâm sự với tôi.</p>
