--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="container">
         <button id="showButton">
-            Bấm dô đi N
+            click dô Tr
         </button>
     </div>
 
@@ -33,10 +33,10 @@
             </div>
             <div class="details">
                 <h4 class="color margin">MERRY CHRISTMAS</h4>
-                <p>Năm thứ 5 đón giáng sinh cùng b.</p>
+                <p>Năm thứ 1 đón giáng sinh cùng bạn.</p>
                 <p>Chúc bạn mùa lễ ấm áp và thi</p>
                 <p>thật tốt nhé, toàn điểm 10.</p>
-                <p>Cảm ơn bạn bên cạnh tâm sự với tôi.</p>
+                <p>Cảm ơn bạn bên cạnh tâm sự với tui.</p>
                 <p>Hy vọng chúng ta sẽ có thêm nhiều</p>
                 <p>kỷ niệm đẹp trong năm tới.</p>
                 <p class="text-right">love you so much!</p>
